project(clew C)

SET(MAJOR_VERSION 1)
SET(MINOR_VERSION 0)
SET(MICRO_VERSION 0)

if(BUILD_SHARED_LIBRARY)
  add_library(${PROJECT_NAME} SHARED clew.c)
else()
  add_library(${PROJECT_NAME} clew.c)
endif()

target_include_directories(${PROJECT_NAME} PRIVATE ../include/)

set_target_properties(${PROJECT_NAME}
    PROPERTIES
        OUTPUT_NAME ${PROJECT_NAME}
        CLEAN_DIRECT_OUTPUT 1
        VERSION "${MAJOR_VERSION}.${MINOR_VERSION}.${MICRO_VERSION}"
        SOVERSION "${MAJOR_VERSION}"
    )

if(UNIX)
target_link_libraries(${PROJECT_NAME} dl)
endif(UNIX)

install(TARGETS ${PROJECT_NAME}
	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}
	RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
